Gnome: Fix unreadable text in calendar events

--- a/gtk-3.20/apps/_gnome.scss
+++ b/gtk-3.20/apps/_gnome.scss
@@ -144,3 +144,17 @@
      border: 0;
      background-color: $bg_color;
  }
+
+/*******************
+ * Calendar events *
+********************/
+.color-light {
+  &.timed label {
+    color: $fg_color;
+    opacity: 1;
+  }
+  .week-view &.timed label, & label, .year-view &:not(.timed) label  {
+    color: $fg_color;
+    opacity: 1;
+  }
+}
